SubBt/force-app/main/default/objects/File__c/File__c.object-meta.xml
<CustomObject>
    <description>Files added by all users. After adding file on Amazon server we will created File for that imte in our org. So later we can use to display in grid or tree.</description>
    <label>BT File</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>