SubBt/force-app/main/default/objects/File__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <description>Access type of the file</description>
    <inlineHelpText>Access type of the file. Based on this other users will be able to access the files.</inlineHelpText>
    <label>Salesforce Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public Download Only</fullName>
            </value>
            <value>
                <fullName>Public Download &amp; Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>