SubBt/force-app/main/default/objects/File__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Id to which file will be linked.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>