SubBt/force-app/main/default/objects/File__c/fields/Allow_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, all users who have access for this file, can delete it from amazon.</description>
    <inlineHelpText>If true, all users who have access for this file, can delete it from amazon.</inlineHelpText>
    <label>Allow other users to Delete?</label>
    <type>Checkbox</type>
</CustomField>