SubBt/force-app/main/default/objects/File__c/fields/Allow_to_Download_by_Presigned_URL__c.field-meta.xml
<CustomField>
    <fullName>Allow_to_Download_by_Presigned_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Download by Presigned URL Only?</label>
    <type>Checkbox</type>
</CustomField>