SubBt/force-app/main/default/objects/File__c/fields/Allow_To_Rename__c.field-meta.xml
<CustomField>
    <fullName>Allow_To_Rename__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, all users who have edit access for this file, can rename files name on amazon server.</description>
    <inlineHelpText>If true, all users who have edit access for this file, can rename files name on amazon server.</inlineHelpText>
    <label>Allow other users to Edit?</label>
    <type>Checkbox</type>
</CustomField>