SubBt/force-app/main/default/objects/File__c/fields/Amazon_File_Key__c.field-meta.xml
<CustomField>
    <fullName>Amazon_File_Key__c</fullName>
    <description>Amazon File Key. Used for all operations on file.</description>
    <label>Amazon File Key</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>