SubBt/force-app/main/default/objects/File__c/fields/Amazon_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Amazon_File_Path__c</fullName>
    <description>Salesforce path for folder hierarchy.</description>
    <formula>IF(ISBLANK(Folder__r.Amazon_File_Path__c) , Salesforce_Unique_Number__c , Folder__r.Amazon_File_Path__c&amp;&quot;/&quot;&amp; Salesforce_Unique_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce File Path</label>
    <type>Text</type>
</CustomField>