SubBt/force-app/main/default/objects/File__c/fields/Amazon_File_Path_With_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Amazon_File_Path_With_Bucket__c</fullName>
    <formula>Bucket_Name__c&amp;&quot;/&quot;&amp;IF(ISBLANK(Folder__r.Amazon_File_Path__c),  Salesforce_Unique_Number__c , Folder__r.Amazon_File_Path__c&amp;&quot;/&quot;&amp; Salesforce_Unique_Number__c)</formula>
    <label>Salesforce File Path With Bucket</label>
    <type>Text</type>
</CustomField>