SubBt/force-app/main/default/objects/File__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Content type of the file.</description>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>