SubBt/force-app/main/default/objects/File__c/fields/ContentDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentDocument_Id__c</fullName>
    <label>ContentDocument Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>