SubBt/force-app/main/default/objects/File__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>