SubBt/force-app/main/default/objects/File__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description fo file.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>