SubBt/force-app/main/default/objects/File__c/fields/Download_Link1__c.field-meta.xml
<CustomField>
    <fullName>Download_Link1__c</fullName>
    <formula>HYPERLINK(&apos;https://s3.amazonaws.com/&apos;+Bucket_Name__c+&apos;/&apos;+Name, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download Link</label>
    <type>Text</type>
</CustomField>