SubBt/force-app/main/default/objects/File__c/fields/Download_Link__c.field-meta.xml
<CustomField>
    <fullName>Download_Link__c</fullName>
    <formula>IF(OR(ISPICKVAL(Upload_Status__c, &apos;&apos;), ISPICKVAL( Upload_Status__c , &apos;Completed&apos;)), HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))&amp;&apos;apex/buildertek__BT_FileDetail?cleanId=&apos;&amp;Id,  IMAGE(LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/buildertek__BT_ResourceUtils/resources/images/fileIcons/downloadlightning.png&quot;,&apos;Download&apos;, 25, 25), &quot;_blank&quot;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download</label>
    <type>Text</type>
</CustomField>