SubBt/force-app/main/default/objects/File__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Extension of file</description>
    <label>Extension</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.doc</fullName>
            </value>
            <value>
                <fullName>.pdf</fullName>
            </value>
            <value>
                <fullName>.jpg</fullName>
            </value>
            <value>
                <fullName>.jpeg</fullName>
            </value>
            <value>
                <fullName>.gif</fullName>
            </value>
            <value>
                <fullName>.png</fullName>
            </value>
            <value>
                <fullName>.xml</fullName>
            </value>
            <value>
                <fullName>.xls</fullName>
            </value>
            <value>
                <fullName>.xlsx</fullName>
            </value>
            <value>
                <fullName>.txt</fullName>
            </value>
            <value>
                <fullName>.mp3</fullName>
            </value>
            <value>
                <fullName>.mkv</fullName>
            </value>
            <value>
                <fullName>.wmv</fullName>
            </value>
            <value>
                <fullName>.wsdl</fullName>
            </value>
            <value>
                <fullName>xsl</fullName>
            </value>
            <value>
                <fullName>.xsml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>