SubBt/force-app/main/default/objects/File__c/fields/File_Downloads__c.field-meta.xml
<CustomField>
    <fullName>File_Downloads__c</fullName>
    <description>Total numbers of file downloads.</description>
    <inlineHelpText>Total numbers of file downloads.</inlineHelpText>
    <label>File Downloads</label>
    <summaryForeignKey>File_Download_History__c.File__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>