SubBt/force-app/main/default/objects/File__c/fields/File_Presigned_URL__c.field-meta.xml
<CustomField>
    <fullName>File_Presigned_URL__c</fullName>
    <description>Amazon Presigned URL to download file.</description>
    <inlineHelpText>Amazon Presigned URL to download file.</inlineHelpText>
    <label>Presigned URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>