SubBt/force-app/main/default/objects/File__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Folder of the file.</description>
    <label>Folder</label>
    <referenceTo>Folder__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>