SubBt/force-app/main/default/objects/File__c/fields/Presigned_URL_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Presigned_URL_Expire_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Presigned URL Expire Date</label>
    <type>Date</type>
</CustomField>