SubBt/force-app/main/default/objects/File__c/fields/Presigned_URL_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Presigned_URL_Frequency__c</fullName>
    <description>Presigned URL for file will be updated as per this frequency.</description>
    <inlineHelpText>Presigned URL for file will be updated as per this frequency.</inlineHelpText>
    <label>Presigned URL Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every Day</fullName>
            </value>
            <value>
                <fullName>Every Week</fullName>
            </value>
            <value>
                <fullName>Every 10 Days</fullName>
            </value>
            <value>
                <fullName>Every 15 Days</fullName>
            </value>
            <value>
                <fullName>Every Month</fullName>
                <default>true</default>
                <label>Every Month</label>
            </value>
            <value>
                <fullName>Every Quarter</fullName>
            </value>
            <value>
                <fullName>Every 6 Months</fullName>
            </value>
            <value>
                <fullName>Every Year</fullName>
            </value>
            <value>
                <fullName>Every 5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>