SubBt/force-app/main/default/objects/File__c/fields/Public_On_Amazon__c.field-meta.xml
<CustomField>
    <fullName>Public_On_Amazon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, any one can access or download the file just using the Amazon URL.</description>
    <inlineHelpText>If true, any one can access or download the file just using the Amazon URL.</inlineHelpText>
    <label>Public on Amazon?</label>
    <type>Checkbox</type>
</CustomField>