SubBt/force-app/main/default/objects/File__c/fields/Punch_List__c.field-meta.xml
<CustomField>
    <fullName>Punch_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punch List</label>
    <referenceTo>Punch_List__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>