SubBt/force-app/main/default/objects/File__c/fields/RFI__c.field-meta.xml
<CustomField>
    <fullName>RFI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI</label>
    <referenceTo>RFI__c</referenceTo>
    <relationshipName>BT_Files</relationshipName>
    <type>Lookup</type>
</CustomField>