SubBt/force-app/main/default/objects/File__c/fields/RFI_Response__c.field-meta.xml
<CustomField>
    <fullName>RFI_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Response</label>
    <referenceTo>RFI_Response__c</referenceTo>
    <relationshipLabel>BT Files</relationshipLabel>
    <relationshipName>BT_Files</relationshipName>
    <type>Lookup</type>
</CustomField>