SubBt/force-app/main/default/objects/File__c/fields/RFQ_To_Vendor__c.field-meta.xml
<CustomField>
    <fullName>RFQ_To_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ To Vendor</label>
    <referenceTo>RFQ_To_Vendor__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>