SubBt/force-app/main/default/objects/File__c/fields/Selection_Option__c.field-meta.xml
<CustomField>
    <fullName>Selection_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Option</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>