SubBt/force-app/main/default/objects/File__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Size of the file content.</description>
    <label>Size (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>