SubBt/force-app/main/default/objects/File__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source File</label>
    <referenceTo>File__c</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>