SubBt/force-app/main/default/objects/File__c/fields/System_Update__c.field-meta.xml
<CustomField>
    <fullName>System_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be set to true by the system when it is updating folder for file. It is mainly for System Use only.</description>
    <inlineHelpText>This flag will be set to true by the system when it is updating folder for file. It is mainly for System Use only.</inlineHelpText>
    <label>System Update</label>
    <type>Checkbox</type>
</CustomField>