SubBt/force-app/main/default/objects/File__c/fields/Track_Download_History__c.field-meta.xml
<CustomField>
    <fullName>Track_Download_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to enable the download history at the file level.</description>
    <inlineHelpText>If true, download history will be tracked for this file.</inlineHelpText>
    <label>Track Download History?</label>
    <type>Checkbox</type>
</CustomField>