SubBt/force-app/main/default/objects/File__c/fields/Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Upload_Status__c</fullName>
    <label>Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copying</fullName>
            </value>
            <value>
                <fullName>Deleting</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <default>true</default>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>