SubBt/force-app/main/default/objects/File__c/validationRules/File_Extension_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Extension_Validation</fullName>
    <active>false</active>
    <description>File Extension cannot be updated once file get created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(  Extension__c ))</errorConditionFormula>
    <errorDisplayField>Extension__c</errorDisplayField>
    <errorMessage>Extension cannot be updated manually. Its a system generated field.</errorMessage>
</ValidationRule>