SubBt/force-app/main/default/objects/File__c/validationRules/File_Size_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Size_Validation</fullName>
    <active>true</active>
    <description>File Size cannot be updated once file get created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(  Size__c ))</errorConditionFormula>
    <errorDisplayField>Size__c</errorDisplayField>
    <errorMessage>Size cannot be updated manually. Its a system generated field.</errorMessage>
</ValidationRule>