SubBt/force-app/main/default/objects/File__c/validationRules/Folder_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Folder_Validation</fullName>
    <active>true</active>
    <description>Folder cannot updated manually.</description>
    <errorConditionFormula>AND(NOT(System_Update__c), NOT(ISNEW()), ISCHANGED( Folder__c ))</errorConditionFormula>
    <errorDisplayField>Folder__c</errorDisplayField>
    <errorMessage>Folder cannot be updated manually. Its a system generated field.</errorMessage>
</ValidationRule>