SubBt/force-app/main/default/objects/File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Folder__c</columns>
    <columns>Size__c</columns>
    <columns>Download_Link__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Download_Link1__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>